# track_linearization

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CLAUDE.md  LICENSE.md  README.md  environment.yml  pyproject.toml  setup.py
.github/: PYPI_TRUSTED_PUBLISHING.md
.github/workflows/: PR-test.yml  release.yml  test_package_build.yml
examples/: interactive_track_builder_demo.py
notebooks/: alternate_linearization_scheme.ipynb  test_linearization.ipynb  track_linearization_tutorial.ipynb
src/track_linearization/: __init__.py  core.py  track_builders.py  utils.py  validation.py
src/track_linearization/tests/: test_batch_utils.py  test_core.py  test_edge_map.py  test_hmm.py  test_import.py  test_track_builders.py  test_utils.py  test_validation.py
track_linearization/: __init__.py  core.py  utils.py
workflows/: test_package_build.yml
